# clinicflow

./: .gitignore  DEMO.md  Makefile  README.md
agent/: .env.example  cached_audio.py  call_log.py  llm.py  main.py  prompts.py  pyproject.toml  receptionist.py  server_client.py  state.py  tts.py
agent/scripts/: generate_cached_audio.py  pipeline_smoke_test.py  scripted_call_test.py
agent/tools/: __init__.py  appointments.py  faq.py  intake.py  routing.py
server/: .env.example  config.py  db.py  main.py  models.py  pyproject.toml  seed.py
server/routes/: appointments.py  calls.py  meta.py  patients.py  tokens.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/appointments/: AppointmentPanel.tsx
web/components/call/: AudioVisualizer.tsx  CallTimer.tsx  CallWorkspace.tsx  PostCallView.tsx  RecordingPlayer.tsx  StatusBadge.tsx
web/components/history/: CallDetail.tsx  HistoryView.tsx
web/components/patient/: IntakePanel.tsx
web/components/routing/: DepartmentFlow.tsx  RoutingPanel.tsx
web/components/shell/: Sidebar.tsx  WallClock.tsx
web/components/timeline/: TimelinePanel.tsx
web/components/transcript/: TranscriptFeed.tsx
web/components/ui/: Panel.tsx
web/hooks/: useAgentState.ts
web/lib/: api.ts  livekit.ts  motion.ts  recorder.ts  types.ts
web/stores/: callStore.ts
