[project]
name = "clinicflow-agent"
version = "0.1.0"
description = "ClinicFlow LiveKit voice agent: receptionist pipeline and tools"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents>=0.12",
    "livekit-plugins-deepgram>=0.7",
    "livekit-plugins-openai>=0.11",
    "livekit-plugins-silero>=0.7",
    "livekit-plugins-rumik-ai",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[tool.uv]
package = false
