[project]
name = "clinicflow-agent"
version = "0.1.0"
description = "ClinicFlow LiveKit voice agent: receptionist pipeline and tools"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[deepgram,openai,silero]~=1.0",
    "livekit-plugins-rumik-ai",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This is an application, not an importable library. Declaring no modules keeps
# `pip install -e .` from auto-discovering the loose top-level modules and the
# tools/ package as an ambiguous distribution; it installs only the deps.
py-modules = []

[tool.uv]
package = false
