[project]
name = "clinicflow-server"
version = "0.1.0"
description = "ClinicFlow persistence API: tokens, seeded EHR, CRUD"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "livekit-api>=0.8",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[tool.uv]
package = false
